# taller1_2024

./: CMakeLists.txt  abb_expresion.cpp  abb_expresion.h  boolean.cpp  dato.cpp  dato.h  datos_arbol.cpp  datos_arbol.h  expresion.cpp  expresion.h  info_nodo.cpp  info_nodo.h  lista_expresion.cpp  lista_expresion.h  lista_string.cpp  lista_string.h  main.cpp  operador.cpp  operador.h  requerimientos.cpp  requerimientos.h  string.cpp  string.h  tipo_dato.h
headers/: abb_expresion.h  boolean.h  datos_arbol.h  expresion.h  lista_expresion.h  operador.h  requerimiento.h  string.h  tipo_dato.h
taller1/: arbol_expresiones.cpp  arbol_expresiones.h  boolean.h  expresion.cpp  expresion.h  info_arbol.cpp  info_arbol.h  lista_expresiones.cpp  lista_expresiones.h  lista_string.cpp  lista_string.h  main.cpp  requerimiento.cpp  requerimiento.h  string.cpp  string.h  taller1.cbp  taller1.depend  taller1.layout  tipo_dato.h
